--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header class="grid_header">
+      <h1>South Park characters app</h1>
+    </header>
+    <main>
+      <section id="characters" class="grid-container"></section>
+    </main>
+    <footer class="grid_footer">
+      <p>South Park karakterer af Filippa Arildsen</p>
+    </footer>
+    <dialog>
+        
+    </dialog>
     <script src="app.js"></script>
   </body>
 </html>
