--- a/index.html
+++ b/index.html
@@ -20,19 +20,15 @@
     <dialog id="dialog_character">
       <section class="dialog-grid">
         <figure>
-          <img
-            id="dialog_image"
-            src="https://upload.wikimedia.org/wikipedia/en/2/25/KyleBroflovski.png"
-            alt="Kyle Broflovski"
-          />
+          <img id="dialog_image" src="" alt="" />
         </figure>
         <article>
           <h2 id="dialog_title"></h2>
-          <h3 id="dialog_religion"></h3>
           <p id="dialog_character_description"></p>
           <section>
             <h4>Personal Info</h4>
             <ul>
+              <li>Religion: <span id="dialog_religion"></span></li>
               <li>Gender: <span id="dialog_gender"></span></li>
               <li>Hair Color: <span id="dialog_hair_color"></span></li>
               <li>Occupation: <span id="dialog_occupation"></span></li>
