--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
           <img id="dialog_image" src="" alt="" />
         </figure>
         <article>
-          <h2 id="dialog_title"></h2>
+          <h2 id="dialog_name"></h2>
+          <h3 id="dialog_nickname"></h3>
           <p id="dialog_character_description"></p>
           <section>
             <h4>Personal Info</h4>
@@ -32,6 +33,7 @@
               <li>Gender: <span id="dialog_gender"></span></li>
               <li>Hair Color: <span id="dialog_hair_color"></span></li>
               <li>Occupation: <span id="dialog_occupation"></span></li>
+              <li>School grade: <span id="dialog_grade"></span></li>
               <li>Catchphrase: <span id="dialog_catchphrase"></span></li>
               <li>Appearances: <span id="dialog_appearances"></span></li>
               <li>
